--- a/index.html
+++ b/index.html
@@ -219,11 +219,13 @@
 
         document.getElementById('request-btn').addEventListener('click', function() {
             console.log('Button clicked!'); // Повинно з'явитися в консолі при кліку
+            alert('333 MY_request-btn JS is working!'); // Має з'явитися спливаюче вікно
             const tg = window.Telegram.WebApp;
             tg.sendData(JSON.stringify({ action: "test" }));
         });
         
         drawBtn.addEventListener('click', () => {
+            alert('444 drawBTN-btn JS is working!'); // Має з'явитися спливаюче вікно
             tg.sendData(JSON.stringify({
                 game_id: gameId,
                 action: "draw_card"
