--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <button id="request-btn">Запросити</button>
             <button id="draw-btn">Взяти з колоди</button>
             <button id="bot-turn-btn" disabled>Хід бота</button>
+            <button id="test-btn">Тестова кнопка</button>
         </div>
         
         <div id="message" class="message"></div>
@@ -227,6 +228,12 @@
             alert('333 MY_request-btn JS is working!'); // Має з'явитися спливаюче вікно
             const tg = window.Telegram.WebApp;
             tg.sendData(JSON.stringify({ action: "test" }));
+        });
+
+        document.getElementById('test-btn').addEventListener('click', function() {
+            const tg = window.Telegram.WebApp;
+            tg.sendData(JSON.stringify({ action: "hello" }));
+            tg.close();
         });
         
         drawBtn.addEventListener('click', () => {
