--- a/index_1.html
+++ b/index_1.html
@@ -9,7 +9,8 @@
     .card {
       width: 150px; height: 200px; background: #fff; border: 2px solid #333;
       display: inline-flex; align-items: center; justify-content: center;
-      font-size: 24px; cursor: pointer; margin-top: 50px;
+      font-size: 50px; cursor: pointer; margin-top: 50px;
+      border-radius: 10px;
     }
   </style>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
