--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -85,7 +85,7 @@
   </div>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script>
-    const WS_URL = "wss://REPLACE_WITH_YOUR_RENDER_URL";
+    const WS_URL = "wss://telegram-webapp-beispiel.onrender.com";
     const tg = window.Telegram && window.Telegram.WebApp ? window.Telegram.WebApp : null;
     if (tg) { 
 	  try { tg.expand(); } catch(e) {} 
