--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -97,7 +97,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
         const tg = window.Telegram.WebApp;
-        const WS_URL = "wss://telegram-webapp-beispiel.onrender.com"; // !!! Змініть на публічну адресу вашого сервера !!!
+        const WS_URL = "wss://telegram-webapp-beispiel.onrender.com";  // !!! Змініть на публічну адресу вашого сервера !!!
         let socket;
         let telegramUser = '';
         let myName = '';
@@ -153,6 +153,8 @@
         }
 
         function updateUI(state) {
+            console.log("Оновлення UI. Отримано state:", state);
+
             elements.playersList.innerHTML = '';
             state.players.forEach(p => {
                 const li = document.createElement('li');
@@ -175,7 +177,6 @@
             elements.deckSize.textContent = state.deck_size;
             elements.gameStatus.textContent = state.game_started ? `Гра розпочалась! Хід гравця: ${state.current_turn}` : `Очікування на гравців... (Всього ${state.players.length}/6)`;
             
-            // Нова логіка для відображення та активації кнопки "Розпочати гру"
             handleStartGameButton(state);
 
             hideAllControls();
@@ -189,14 +190,22 @@
         }
 
         function handleStartGameButton(state) {
+            console.log("Виклик handleStartGameButton...");
             const isRoomAdmin = state.room_admin === myName;
-            
+            const canStartGame = !state.game_started && isRoomAdmin && state.players.length > 1;
+
+            console.log("isRoomAdmin:", isRoomAdmin);
+            console.log("!state.game_started:", !state.game_started);
+            console.log("state.players.length:", state.players.length);
+            console.log("Кнопка повинна бути активна:", canStartGame);
+
             if (isRoomAdmin && !state.game_started) {
                 elements.startGameBtn.style.display = 'block';
-                // Кнопка активна, якщо гравців більше 1
-                elements.startGameBtn.disabled = state.players.length < 2;
+                elements.startGameBtn.disabled = !canStartGame;
+                console.log("Кнопка 'Розпочати гру' відображена. disabled:", elements.startGameBtn.disabled);
             } else {
                 elements.startGameBtn.style.display = 'none';
+                console.log("Кнопка 'Розпочати гру' прихована.");
             }
         }
 
