--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -35,7 +35,7 @@
             <button id="startGameBtn" onclick="startGame()" style="display: none;">Розпочати гру</button>
 
             <div id="controls">
-                
+                <!-- Це коментар <button id="startGameBtn" onclick="startGame()" style="display: none;">Розпочати гру</button> -->
                 <div id="game-actions" style="display: none;">
                     <p>Ваш хід, <span id="current-player-name"></span>! Виберіть гравця та карту для запиту.</p>
                     <select id="target-player-select"></select>
