--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -32,7 +32,7 @@
 
         <div id="game" style="display: none;">
             <div class="game-state-message" id="game-status">Очікування на гравців...</div>
-            <button id="startGameBtn" onclick="startGame()" style="display: none;">Розпочати гру</button>
+            <button id="startGameBtn" onclick="startGame()" >Розпочати нарешті гру</button>
 
             <div id="controls">
                 <!-- Це коментар <button id="startGameBtn" onclick="startGame()" style="display: none;">Розпочати гру</button> -->
