--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -37,7 +37,7 @@
 
         <div id="game" style="display: none;">
             <div class="game-state-message" id="game-status">Очікування на jobanuch гравців...</div>
-            <button id="startGameBtn" onclick="startGame()" style="display: none;">Розпочати гру</button>
+            <button id="startGameBtn" onclick="startGame()" >Розпочати гру</button>
 
             <div id="controls">
                 <div id="game-actions" style="display: none;">
