--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -36,7 +36,7 @@
         </div>
 
         <div id="game" style="display: none;">
-            <div class="game-state-message" id="game-status">Очікування на jobanuch гравців...</div>
+            <div class="game-state-message" id="game-status">Очікування на гравців...</div>
             
             <div id="controls">
                 <div id="game-actions" style="display: none;">
