--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -248,6 +248,8 @@
                         break;
                     case 'update_state':
                         //myCards = data.my_hand;
+						alert ("etwas passiert!!!");
+						alert("myCards: " + data.my_hand);
                         updateUI(data.state, data.my_hand); // Передаємо my_hand як аргумент
                         break;
                     case 'start_game':
