--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -68,11 +68,12 @@
 
 
 
-                <div id="guess-count" class="game-control-panel hidden">
+                <div id="guess-count" style="display: none;">
                     <p>Вгадайте, скільки карт з цим рангом у суперника?</p>
                     <input type="number" id="guess-count-input" min="0" max="4">
                     <button id="submit-guess-count-btn">Відправити</button>
                 </div>
+
                 
                 <div id="guess-suits-form" style="display: none;">
                     <p>Скільки мастей ви вгадаєте?</p>
