--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -59,15 +59,7 @@
                     </select>
                     <button onclick="askForCard()">Запитати</button>
                 </div>
-                
-                <div id="guess-count-form" style="display: none;">
-                    <p>Гравець <span id="target-player-name-guess"></span> має карти значення <span id="card-rank-guess"></span>. Скільки їх у нього?</p>
-                    <input type="number" id="guess-count-input" min="1" max="4">
-                    <button onclick="guessCount()">Вгадати кількість</button>
-                </div>
-
-
-
+               
                 <div id="guess-count" style="display: none;">
                     <p>Вгадайте, скільки карт з цим рангом у суперника?</p>
                     <input type="number" id="guess-count-input" min="0" max="4">
@@ -120,6 +112,7 @@
         let myName = '';
         let myRoomId = '';
         let myCards = [];
+        let lastAskedCardRank = null; // Нова змінна для збереження рангу карти
 
         const elements = {
             lobby: document.getElementById('lobby'),
@@ -137,15 +130,9 @@
             log: document.getElementById('log'),
             targetPlayerSelect: document.getElementById('target-player-select'),
             cardRankSelect: document.getElementById('card-rank-select'),
-                
-            guessCountForm: document.getElementById('guess-count-form'),
-            guessCountInput: document.getElementById('guess-count-input'),
-            guessSuitsForm: document.getElementById('guess-suits-form'),
-
             guessCount: document.getElementById('guess-count'),
             guessCountInput: document.getElementById('guess-count-input'),
-            submitGuessCountBtn: document.getElementById('submit-guess-count-btn'),
-                
+            submitGuessCountBtn: document.getElementById('submit-guess-count-btn'),                
             suitsCheckboxes: document.getElementById('suits-checkboxes'),
             responseButtons: document.getElementById('response-buttons'),
             askingPlayerName: document.getElementById('asking-player-name'),
@@ -279,11 +266,12 @@
                         elements.askedCardRank.textContent = data.card_rank;
                         break;
                     case 'guess_count_needed':
-                        //hideAllControls();
+                        hideAllControls();
                         elements.guessCount.style.display = 'block';
+                        lastAskedCardRank = data.card_rank;
                         // Оновлення тексту, якщо потрібно (наприклад, з даними від сервера)
-                        // elements.targetPlayerNameGuess.textContent = data.target_player;
-                        // elements.cardRankGuess.textContent = data.card_rank;
+                        elements.targetPlayerNameGuess.textContent = data.target_player;
+                        elements.cardRankGuess.textContent = lastAskedCardRank;
                         break;
                     case 'guess_suits_needed':
                         hideAllControls();
@@ -329,15 +317,6 @@
             hideAllControls();
         }
 
-        function guessCount() {
-            const count = elements.guessCountInput.value;
-            if (count) {
-                socket.send(JSON.stringify({ type: 'guess_count', room: myRoomId, count: parseInt(count) }));
-            } else {
-                logMessage('Будь ласка, введіть кількість.');
-            }
-        }
-
         function guessSuits() {
             const suits = Array.from(elements.suitsCheckboxes.querySelectorAll('input:checked')).map(cb => cb.value);
             if (suits.length > 0) {
@@ -347,7 +326,7 @@
             }
         }
 
-// Додайте обробник подій для нової кнопки
+    // Додайте обробник подій для нової кнопки
     elements.submitGuessCountBtn.onclick = () => {
         const count = parseInt(elements.guessCountInput.value, 10);
         if (!isNaN(count)) {
