--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -266,7 +266,7 @@
                         elements.askedCardRank.textContent = data.card_rank;
                         break;
                     case 'guess_count_needed':
-                        hideAllControls();
+                        //hideAllControls();
                         elements.guessCount.style.display = 'block';
                         lastAskedCardRank = data.card_rank;
                         // Оновлення тексту, якщо потрібно (наприклад, з даними від сервера)
