--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -244,7 +244,7 @@
                         break;
                     case 'update_state':
                         //myCards = data.my_hand;
-                        updateUI(data.state, data.my_hand); // Передаємо my_hand як аргумент
+                        updateUI(data.state, data.state.my_hand); // Передаємо my_hand як аргумент
                         break;
                     case 'start_game':
                         logMessage('Гра розпочалась!');
