--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -192,6 +192,18 @@
             
             hideAllControls();
             const myPlayerState = state.players.find(p => p.name === myName);
+            // --- ДОДАЙТЕ ЦІ РЯДКИ ---
+            const myPlayerState = state.players.find(p => p.name === myName);
+            console.log("Моє ім'я (myName):", myName);
+            console.log("Стан гравця (myPlayerState):", myPlayerState);
+            alert ("Моє ім'я (myName):", myName);
+            alert("Стан гравця (myPlayerState):", myPlayerState);
+            if (myPlayerState) {
+                console.log("Прапорець 'is_turn':", myPlayerState.is_turn);
+            }
+            // --- КІНЕЦЬ ДОДАНИХ РЯДКІВ ---
+
+            
             if (state.game_started && myPlayerState && myPlayerState.is_turn) 
             {
                 elements.gameActions.style.display = 'block';
