--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -196,8 +196,8 @@
             const myPlayerState = state.players.find(p => p.name === myName);
             console.log("Моє ім'я (myName):", myName);
             console.log("Стан гравця (myPlayerState):", myPlayerState);
-            alert ("Моє ім'я (myName):", myName);
-            alert("Стан гравця (myPlayerState):", myPlayerState);
+            //alert ("Моє ім'я (myName):", myName);
+            //alert("Стан гравця (myPlayerState):", myPlayerState);
             if (myPlayerState) {
                 console.log("Прапорець 'is_turn':", myPlayerState.is_turn);
             }
