--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="game-container">
-        <h1>Гра "Скриньки" 2-6</h1>
+        <h1>Гра "Скриньки" - 2</h1>
 
         <div id="lobby">
             <p>Виберіть ім'я та кімнату для гри.</p>
@@ -258,13 +258,6 @@
                         break;
                     case 'update_state':
                         updateUI(data.state, data.state.my_hand);
-                        
-                        const myPlayerState = data.state.players.find(p => p.name === myName);
-                        if (data.state.game_started && myPlayerState && myPlayerState.is_turn) {
-                            updateControls('game-actions');
-                        } else {
-                            updateControls(null);
-                        }
                         break;
                     case 'game_over':
                         logMessage(`Гра закінчена! Переможець: ${data.winner}.`);
