--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -281,7 +281,7 @@
                         break;
                     case 'guess_count_needed':
                         //hideAllControls();
-                        elements.guessCount.style.display = 'block';
+                        elements.guessCountForm.style.display = 'block';
                         // Оновлення тексту, якщо потрібно (наприклад, з даними від сервера)
                         // elements.targetPlayerNameGuess.textContent = data.target_player;
                         // elements.cardRankGuess.textContent = data.card_rank;
