--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -142,9 +142,9 @@
             guessCountInput: document.getElementById('guess-count-input'),
             guessSuitsForm: document.getElementById('guess-suits-form'),
 
-            guessCount: document.getElementById('guess-count'),
-            guessCountInput: document.getElementById('guess-count-input'),
-            submitGuessCountBtn: document.getElementById('submit-guess-count-btn'),
+            //guessCount: document.getElementById('guess-count'),
+            //guessCountInput: document.getElementById('guess-count-input'),
+            //submitGuessCountBtn: document.getElementById('submit-guess-count-btn'),
                 
             suitsCheckboxes: document.getElementById('suits-checkboxes'),
             responseButtons: document.getElementById('response-buttons'),
