--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -280,7 +280,7 @@
                         elements.askedCardRank.textContent = data.card_rank;
                         break;
                     case 'guess_count_needed':
-                        //hideAllControls();
+                        hideAllControls();
                         elements.guessCountForm.style.display = 'block';
                         // Оновлення тексту, якщо потрібно (наприклад, з даними від сервера)
                         elements.targetPlayerNameGuess.textContent = data.target_player;
