--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -69,8 +69,8 @@
 
 
                 <div id="guess-count" style="display: none;">
-                    <p>Вгадайте, скільки карт з цим рангом у суперника?</p>
-                    <input type="number" id="guess-count-input" min="0" max="4">
+                    <p>Вгадайте, скільки карт з цим рангом є у суперника?</p>
+                    <input type="number" id="guess-count-input" min="1" max="4">
                     <button id="submit-guess-count-btn">Відправити</button>
                 </div>
 
@@ -142,9 +142,9 @@
             guessCountInput: document.getElementById('guess-count-input'),
             guessSuitsForm: document.getElementById('guess-suits-form'),
 
-            //guessCount: document.getElementById('guess-count'),
-            //guessCountInput: document.getElementById('guess-count-input'),
-            //submitGuessCountBtn: document.getElementById('submit-guess-count-btn'),
+            guessCount: document.getElementById('guess-count'),
+            guessCountInput: document.getElementById('guess-count-input'),
+            submitGuessCountBtn: document.getElementById('submit-guess-count-btn'),
                 
             suitsCheckboxes: document.getElementById('suits-checkboxes'),
             responseButtons: document.getElementById('response-buttons'),
@@ -281,7 +281,7 @@
                         break;
                     case 'guess_count_needed':
                         hideAllControls();
-                        elements.guessCountForm.style.display = 'block';
+                        elements.guessCount.style.display = 'block';
                         // Оновлення тексту, якщо потрібно (наприклад, з даними від сервера)
                         elements.targetPlayerNameGuess.textContent = data.target_player;
                         elements.cardRankGuess.textContent = data.card_rank;
