--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -61,7 +61,7 @@
                 </div>
                 
                 <div id="guess-count-form" style="display: none;">
-                    <p>Гравець <span id="target-player-name-guess"></span> має карти значення <span id="card-rank-guess"></span>. Скільки їх у нього?</p>
+                    <!-- Це коментар <p>Гравець <span id="target-player-name-guess"></span> має карти значення <span id="card-rank-guess"></span>. Скільки їх у нього?</p>   Це коментар -->
                     <input type="number" id="guess-count-input" min="1" max="4">
                     <button onclick="guessCount()">Вгадати кількість</button>
                 </div>
@@ -70,7 +70,6 @@
 
                 <div id="guess-count" style="display: none;">
                     <p>Вгадайте, скільки карт з цим рангом є у вашого суперника?</p>
-                    <p>Гравець <span id="target-player-name-guess"></span> має карти значення <span id="card-rank-guess"></span>. Скільки їх у нього?</p>
                     <input type="number" id="guess-count-input" min="1" max="4">
                     <button id="submit-guess-count-btn">Відправити</button>
                 </div>
@@ -139,9 +138,9 @@
             targetPlayerSelect: document.getElementById('target-player-select'),
             cardRankSelect: document.getElementById('card-rank-select'),
                 
-            //guessCountForm: document.getElementById('guess-count-form'),
-            //guessCountInput: document.getElementById('guess-count-input'),
-            //guessSuitsForm: document.getElementById('guess-suits-form'),
+            guessCountForm: document.getElementById('guess-count-form'),
+            guessCountInput: document.getElementById('guess-count-input'),
+            guessSuitsForm: document.getElementById('guess-suits-form'),
 
             guessCount: document.getElementById('guess-count'),
             guessCountInput: document.getElementById('guess-count-input'),
@@ -282,7 +281,7 @@
                         break;
                     case 'guess_count_needed':
                         hideAllControls();
-                        elements.guessCount.style.display = 'block';
+                        elements.guessCountForm.style.display = 'block';
                         // Оновлення тексту, якщо потрібно (наприклад, з даними від сервера)
                         elements.targetPlayerNameGuess.textContent = data.target_player;
                         elements.cardRankGuess.textContent = data.card_rank;
@@ -332,6 +331,7 @@
         }
 
         function guessCount() {
+            alert("guesCount funktioniert!!!!!!!!!!!!!!!!");
             const count = elements.guessCountInput.value;
             if (count) {
                 socket.send(JSON.stringify({ type: 'guess_count', room: myRoomId, count: parseInt(count) }));
