--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -140,7 +140,7 @@
                 
             //guessCountForm: document.getElementById('guess-count-form'),
             //guessCountInput: document.getElementById('guess-count-input'),
-            //guessSuitsForm: document.getElementById('guess-suits-form'),
+            guessSuitsForm: document.getElementById('guess-suits-form'),
 
             guessCount: document.getElementById('guess-count'),
             guessCountInput: document.getElementById('guess-count-input'),
