--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -138,8 +138,8 @@
             targetPlayerSelect: document.getElementById('target-player-select'),
             cardRankSelect: document.getElementById('card-rank-select'),
                 
-            //guessCountForm: document.getElementById('guess-count-form'),
-            //guessCountInput: document.getElementById('guess-count-input'),
+            guessCountForm: document.getElementById('guess-count-form'),
+            guessCountInput: document.getElementById('guess-count-input'),
             guessSuitsForm: document.getElementById('guess-suits-form'),
 
             guessCount: document.getElementById('guess-count'),
