--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -70,7 +70,8 @@
 
                 <div id="guess-count" style="display: none;">
                     <p>Вгадайте, скільки карт з цим рангом є у вашого суперника?</p>
-                    <input type="number" id="guess-count-input" min="1" max="4">
+                    <p>Гравець <span id="target-player-name-guess"></span> має карти значення <span id="card-rank-guess"></span>. Скільки їх у нього?</p>
+                    <input type="number" id="guess-count-input" min="1" max="4">
                     <button id="submit-guess-count-btn">Відправити</button>
                 </div>
 
