--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -61,7 +61,7 @@
                 </div>
                 
                 <div id="guess-count-form" style="display: none;">
-                    <p>Гравець <span id="target-player-name-guess"></span> має карти значення <span id="card-rank-guess"></span>. Скільки їх у нього?</p>
+                    <!-- Це коментар <p>Гравець <span id="target-player-name-guess"></span> має карти значення <span id="card-rank-guess"></span>. Скільки їх у нього?</p>   Це коментар -->
                     <input type="number" id="guess-count-input" min="1" max="4">
                     <button onclick="guessCount()">Вгадати кількість</button>
                 </div>
@@ -281,7 +281,7 @@
                         break;
                     case 'guess_count_needed':
                         //hideAllControls();
-                        elements.guessCount.style.display = 'block';
+                        elements.guessCountForm.style.display = 'block';
                         // Оновлення тексту, якщо потрібно (наприклад, з даними від сервера)
                         elements.targetPlayerNameGuess.textContent = data.target_player;
                         elements.cardRankGuess.textContent = data.card_rank;
